test/errors/type/str/split3.yasl
mt.lookup('', .split)(.str, true)
